--- a/public/global.css
+++ b/public/global.css
@@ -2,9 +2,14 @@
 	--color-body: darkslategray;
 	--color-text-subdued: dimgray;
 	--color-text-inverse: white;
+	--color-surface: white;
 	--color-brand: royalblue;
 	--color-brand-hover: darkblue;
 	--color-border: gainsboro;
+	--color-background-subdued: whitesmoke;
+	--color-accent: darkviolet;
+	--color-favorite: red;
+	--color-error: red;
 	--gutter: 1rem;
 }
 @font-face { 
@@ -37,6 +42,7 @@
 	font-family: 'Really Sans Small', sans-serif;
 	line-height: 1.5;
 	color: var(--color-body);
+	scrollbar-gutter: stable both-edges;
 }
 :where(img) {
 	display: block;
@@ -121,7 +127,7 @@
 	--column-min: 300px;
 	--grid-gap: var(--gutter);
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(var(--column-min), 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(var(--column-min), 1fr));
 	gap: var(--grid-gap);
 }
 .aspect-ratio {
@@ -178,11 +184,11 @@
 	box-shadow: 0 0 2px 2px blue;
 }
 .input-text.is-invalid {
-	border-color: red;
+	border-color: var(--color-error);
 }
 .input-text.is-invalid:focus-visible {
-	outline: 1px solid red;
-	box-shadow: 0 0 2px 2px red;
+	outline: 1px solid var(--color-error);
+	box-shadow: 0 0 2px 2px var(--color-error);
 }
 .icon {
 	fill: currentColor;
@@ -217,7 +223,7 @@
 	border-color: var(--color-body);
 }
 .text-red {
-	color: red;
+	color: var(--color-favorite);
 }
 .text-small {
 	font-size: .875rem;
@@ -228,7 +234,7 @@
 	text-decoration: inherit;
 }
 .badge {
-	--badge-color: darkviolet;
+	--badge-color: var(--color-accent);
 	font-size: .75rem;
 	color: var(--color-text-body);
 	background-color: var(--badge-color);
@@ -259,7 +265,7 @@
 	left: 0;
 	right: 0;
 	overflow-y: auto;
-	background-color: white;
+	background-color: var(--color-surface);
 	border-radius: .25rem;
 	z-index: 100;
 	box-shadow: 0 4px 8px rgb(0 0 0 / .8);
@@ -267,4 +273,35 @@
 .modal header {
 	border-bottom: 1px solid var(--color-border);
 	margin-bottom: var(--gutter);
+}
+
+.toggle-button-group {
+	border: 1px solid var(--color-border);
+	display: inline-flex;
+	border-radius: .125rem;
+	overflow: hidden;
+}
+
+.toggle-button-group button {
+  border-radius: 0;
+	border: none;
+	font-weight: 600;
+	padding: .25rem .5rem;
+	background-color: var(--color-background-subdued);
+	color: var(--color-text-subdued);
+	outline-offset: -2px;
+	border: 1px solid transparent;
+}
+.toggle-button-group button:hover {
+	cursor: pointer;
+	background-color: var(--color-border);
+	color: var(--color-body);
+}
+.toggle-button-group button.is-active {
+	background-color: var(--color-surface);
+	color: var(--color-body);
+}
+
+.toggle-button-group > :not(:last-child) {
+	border-inline-end: 1px solid var(--color-border);
 }
